@@ -205,15 +205,15 @@ class Utility extends Common\SysUtility
             foreach ($xsitemap_show['modules'] as $mod) {
                 if ($mod['directory']) {
                     $xml_url = $xml->createElement('url');
-                    $xml_url->appendChild($xml->createComment(htmlspecialchars(htmlentities(\ucwords($mod['name']), \ENT_QUOTES | \ENT_HTML5) . ' ')));
-                    $loc = $xml->createElement('loc', htmlspecialchars(htmlentities($GLOBALS['xoops']->url("www/modules/{$mod['directory']}/index.php"), \ENT_QUOTES | \ENT_HTML5)));
+                    $xml_url->appendChild($xml->createComment(htmlspecialchars((\ucwords($mod['name'])) . ' ')));
+                    $loc = $xml->createElement('loc', htmlspecialchars(($GLOBALS['xoops']->url("www/modules/{$mod['directory']}/index.php"))));
                     $xml_url->appendChild($loc);
                     $xml_set->appendChild($xml_url);
                 }
                 if ($mod['parent'] ?? null) {
                     foreach ($mod['parent'] as $parent) {
                         $xml_parent = $xml->createElement('url');
-                        $loc        = $xml->createElement('loc', htmlspecialchars(htmlentities($GLOBALS['xoops']->url("www/modules/{$mod['directory']}/{$parent['url']}"), \ENT_QUOTES | \ENT_HTML5)));
+                        $loc        = $xml->createElement('loc', htmlspecialchars($GLOBALS['xoops']->url("www/modules/{$mod['directory']}/{$parent['url']}")));
                         $xml_parent->appendChild($loc);
                         $xml_set->appendChild($xml_parent);
                     }
@@ -222,7 +222,7 @@ class Utility extends Common\SysUtility
                     if ($mod['parent'][$z]['child'] ?? null) {
                         foreach ($mod['parent'][$z]['child'] as $child) {
                             $xml_child = $xml->createElement('url');
-                            $loc       = $xml->createElement('loc', htmlspecialchars(htmlentities($GLOBALS['xoops']->url("www/modules/{$mod['directory']}/{$child['url']}"), \ENT_QUOTES | \ENT_HTML5)));
+                            $loc       = $xml->createElement('loc', htmlspecialchars($GLOBALS['xoops']->url("www/modules/{$mod['directory']}/{$child['url']}")));
                             $xml_child->appendChild($loc);
                             $xml_set->appendChild($xml_child);
                         }
